--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "lodash-es": "^4.17.15",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -17,9 +18,11 @@
     "@vue/cli-service": "~4.2.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.0.3",
+    "comlink-loader": "^2.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.1.2",
+    "lodash": "^4.17.15",
     "prettier": "^1.19.1",
     "vue-template-compiler": "^2.6.11"
   }
